syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "Project";

package nem;


import "google/protobuf/timestamp.proto";
import "project_extension.proto";

message Project {  
    string uuid = 1;
    int64 version = 2;
    string name = 3;
    string description = 4;
    repeated string tags = 5;
    string url = 6;
    string owner_uuid = 7;
    string team_uuid = 8;
    ProjectAccessType access_type = 9;
    repeated ProjectExtension project_extensions = 10;
    ProjectStatus status = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
    string created_by_uuid = 14;
    string updated_by_uuid = 15;    
}

enum ProjectAccessType { 
    PROJECT_ACCESS_TYPE_INVALID = 0;
    PROJECT_ACCESS_TYPE_INHERIT = 1;
    PROJECT_ACCESS_TYPE_CUSTOM = 2;
}

enum ProjectStatus { 
    PROJECT_STATUS_INVALID = 0;
    PROJECT_STATUS_ACTIVE = 1;
    PROJECT_STATUS_DISABLED = 2;
}
